--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
     </a>
     <a href="https://horyzont.eu/" target="_blank">
-    <div class="project-tile">
+    <div class="project-tile educations2">
       <h4>Higher Education</h4>
       <hr>
       <p><b>WWIS Horyzont.eu</b></p><hr>
