--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="#welcome-section">
           <li>About</li>
         </a>
-         <a href="#projects">
+         <a href="#project">
           <li>Experience</li>
         </a>
         <a href="#contact">
@@ -23,7 +23,7 @@
       <h1> Hi, my name is Adam </h1>
       <h2><i>Let's get to know eachother</i></h2>
     </section>
-    <section id="projects">
+    <section id="project">
       <h1 class="projects-header">My experience in various environments</h1>
       <div class="confidence">
 <h3>Confidence in software</h3><br/>
@@ -95,7 +95,6 @@
     </div>
     </a>
     </div>
-    </div>
     </section>
     <section id="contact">
       <h1 class="contact-header">Get in contact with me!</h1>
@@ -106,6 +105,6 @@
         <a href="mailto:adammucha21@gmail.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
         <a href="https://discordapp.com/users/292612927121522689" class="brn contact-details" target="_blank"><i class="fa-brands fa-discord"></i>Discord</a>
       </div>
-      <section>
+    </section>
   </body>
 </html>
