--- a/index-pl.html
+++ b/index-pl.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script src="https://kit.fontawesome.com/d8fe80c268.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="styles-pl.css" />
+  <link rel="stylesheet" href="styles-en.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Adama</title>
   </head>
@@ -23,7 +23,7 @@
       <h1> Hejka, nazywam się Adam </h1>
       <h2><i>Poznajmy się!</i></h2>
     </section>
-    <section id="projects">
+    <section id="project">
       <h1 class="projects-header">Moje doświadczenie w różnych środowiskach</h1>
       <div class="confidence">
   <div class="gridder">
