--- a/index.html
+++ b/index.html
@@ -1,110 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://kit.fontawesome.com/d8fe80c268.js" crossorigin="anonymous"></script>
+
+<head>
+  <script src="https://kit.fontawesome.com/d8fe80c268.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="styles-en.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adam's Portfolio</title>
-  </head>
-  <body>
-    <nav id="navbar">
-      <ul class="nav-list">
-        <a href="#welcome-section">
-          <li>About</li>
-        </a>
-         <a href="#project">
-          <li>Experience</li>
-        </a>
-        <a href="#contact">
-          <li>Contact</li>
-        </a>
-    </nav>
-    <section id="welcome-section">
-      <h1> Hi, my name is Adam </h1>
-      <h2><i>Let's get to know eachother</i></h2>
-    </section>
-    <section id="project">
-      <h1 class="projects-header">My experience in various environments</h1>
-      <div class="confidence">
-<h3>Confidence in software</h3><br/>
-  <div class="gridder">
-    <div class="project-tile">
-      <h4>OS knowledge</h4>
-      <hr>
-      <p>Windows<p><div class="line"><div class="full"></div></div>
-        <hr>
-        <p>Linux</p>
-        <div class="line"><div class="half"></div></div>
-        <hr>
-        <p>MacOS</p>
-        <div class="line"><div class="low"></div></div>
-    </div>
-    <div class="project-tile language">
-      <h4>Language confidence</h4>
-      <hr>
-      <p>HTML/CSS</p>
-      <div class="line"><div class="full"></div></div>
-      <hr>
-      <p>SQL</p>
-      <div class="line"><div class="high-half"></div></div>
-      <hr>
-      <p>JavaScript</p>
-      <div class="line"><div class="half"></div></div>
-      <hr>
-      <p>C++</p>
-      <div class="line"><div class="low-half"></div></div>
-<hr>
-<p>Python</p>
-      <div class="line"><div class="low"></div></div>
-    </div>
-    <div class="project-tile software">
-      <h4>Software knowledge</h4>
-      <hr>
-      <p>Microsoft Office Suite</p>
-      <div class="line"><div class="full"></div></div>
-      <hr>
-      <p>Adobe Suite(Photoshop, Premiere Pro)</p>
-      <div class="line"><div class="high-half"></div></div>
-    </div>
-    </div>
+</head>
+
+<body>
+  <nav id="navbar">
+    <ul class="nav-list">
+      <a href="#welcome-section">
+        <li>About</li>
+      </a>
+      <a href="#project">
+        <li>Experience</li>
+      </a>
+      <a href="#contact">
+        <li>Contact</li>
+      </a>
+  </nav>
+  <section id="welcome-section">
+    <h1> Hi, my name is Adam </h1>
+    <h2><i>Let's get to know eachother</i></h2>
+  </section>
+  <section id="project">
+    <h1 class="projects-header">My experience in various environments</h1>
+    <div class="confidence">
+      <h3>Confidence in software</h3><br />
+      <div class="gridder">
+        <div class="project-tile">
+          <h4>OS knowledge</h4>
+          <hr>
+          <p>Windows
+          <p>
+          <div class="line">
+            <div class="full"></div>
+          </div>
+          <hr>
+          <p>Linux</p>
+          <div class="line">
+            <div class="half"></div>
+          </div>
+          <hr>
+          <p>MacOS</p>
+          <div class="line">
+            <div class="low"></div>
+          </div>
+        </div>
+        <div class="project-tile language">
+          <h4>Language confidence</h4>
+          <hr>
+          <p>HTML/CSS</p>
+          <div class="line">
+            <div class="full"></div>
+          </div>
+          <hr>
+          <p>SQL</p>
+          <div class="line">
+            <div class="high-half"></div>
+          </div>
+          <hr>
+          <p>JavaScript</p>
+          <div class="line">
+            <div class="half"></div>
+          </div>
+          <hr>
+          <p>C++</p>
+          <div class="line">
+            <div class="low-half"></div>
+          </div>
+          <hr>
+          <p>Python</p>
+          <div class="line">
+            <div class="low"></div>
+          </div>
+        </div>
+        <div class="project-tile software">
+          <h4>Software knowledge</h4>
+          <hr>
+          <p>Microsoft Office Suite</p>
+          <div class="line">
+            <div class="full"></div>
+          </div>
+          <hr>
+          <p>Adobe Suite(Photoshop, Premiere Pro)</p>
+          <div class="line">
+            <div class="high-half"></div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="education">
-    <h3>Education and experience</h3>
-    <div class="gridder">
-    <a href="http://liceum.nowaruda.pl/main/" target="_blank">
-    <div class="project-tile educations">
-      <h4>Middle Education</h4>
-      <hr>
-      <p>Liceum Ogólnokształcące</p><br>
-      from 01.09.2019 to 28.04.2023
-      <hr>
-      <p>
-        Physics, mathematics and computer science in extended scope</p>
-        <hr>
-        <h4>GPA: 5.0</h4>
-    </div>
-    </a>
-    <a href="https://horyzont.eu/" target="_blank">
-    <div class="project-tile educations2">
-      <h4>Higher Education</h4>
-      <hr>
-      <p><b>WWIS Horyzont.eu</b></p><hr>
-      from 01.10.2023, ongoing
-      <hr>
-      <p>Computer Science</p>
-    </div>
-    </a>
-    </div>
-    </section>
-    <section id="contact">
-      <h1 class="contact-header">Get in contact with me!</h1>
-      <br>
-      <div class="contact-links">
-        <a href="https://www.facebook.com/adam.mucha.5648/" target="_blank" class="btn contact-details"><i class="fab fa-facebook-square"></i> Facebook</a>
-        <a id="profile-link" href="https://github.com/JezThePhilo" target="_blank" class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
-        <a href="mailto:adammucha21@gmail.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
-        <a href="https://discordapp.com/users/292612927121522689" class="brn contact-details" target="_blank"><i class="fa-brands fa-discord"></i>Discord</a>
+      <h3>Education and experience</h3>
+      <div class="gridder">
+        <a href="http://liceum.nowaruda.pl/main/" target="_blank">
+          <div class="project-tile educations">
+            <h4>Middle Education</h4>
+            <hr>
+            <p>Liceum Ogólnokształcące</p><br>
+            from 01.09.2019 to 28.04.2023
+            <hr>
+            <p>
+              Physics, mathematics and computer science in extended scope</p>
+            <hr>
+            <h4>GPA: 5.0</h4>
+          </div>
+        </a>
+        <a href="https://horyzont.eu/" target="_blank">
+          <div class="project-tile educations2">
+            <h4>Higher Education</h4>
+            <hr>
+            <p><b>WWIS Horyzont.eu</b></p>
+            <hr>
+            from 01.10.2023, ongoing
+            <hr>
+            <p>Computer Science</p>
+          </div>
+        </a>
       </div>
-    </section>
-  </body>
+  </section>
+  <section id="contact">
+    <h1 class="contact-header">Get in contact with me!</h1>
+    <br>
+    <div class="contact-links">
+      <a href="https://www.facebook.com/adam.mucha.5648/" target="_blank" class="btn contact-details"><i
+          class="fab fa-facebook-square"></i> Facebook</a>
+      <a id="profile-link" href="https://github.com/JezThePhilo" target="_blank" class="btn contact-details"><i
+          class="fab fa-github"></i> GitHub</a>
+      <a href="mailto:adammucha21@gmail.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
+      <a href="https://discordapp.com/users/292612927121522689" class="brn contact-details" target="_blank"><i
+          class="fa-brands fa-discord"></i>Discord</a>
+    </div>
+  </section>
+</body>
+
 </html>
