--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <hr>
             from 01.10.2023, ongoing
             <hr>
-            <p>Computer Science</p>
+            <p>Computer Science, no specialisation</p>
           </div>
         </a>
       </div>
